--- a/EyeSpeak/Base.lproj/Main.storyboard
+++ b/EyeSpeak/Base.lproj/Main.storyboard
@@ -4,12 +4,14 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Configuration-->
         <scene sceneID="c0f-Tf-9XS">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="owq-e8-MjY" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="oxU-O0-apE" customClass="ConfigurationListTableViewController" customModule="Eyespeak" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="73t-RH-0JB">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
@@ -46,24 +48,8 @@
                         <segue destination="IvX-dq-8eZ" kind="show" identifier="sixKeyboard" id="7CA-qI-4qG"/>
                     </connections>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="owq-e8-MjY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-655" y="-179"/>
-        </scene>
-        <!--Text Selection View Controller-->
-        <scene sceneID="IT7-v2-ZYb">
-            <objects>
-                <viewController id="c4r-xL-h3L" customClass="TextSelectionViewController" customModule="Eyespeak" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Zbe-IK-Tu3">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="iwY-Fq-T2q"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EM5-kf-ba2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2104" y="-1385"/>
         </scene>
         <!--Text Selection View Controller-->
         <scene sceneID="wcZ-O0-4Me">
@@ -117,40 +103,25 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yvH-BH-Lku" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1124" y="-1324"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Xhu-45-jeY">
-            <objects>
-                <navigationController id="uec-WP-zZM" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aRA-bK-R4B">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="50"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="oxU-O0-apE" kind="relationship" relationship="rootViewController" id="BkC-mn-vmn"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="w3s-bV-fB7" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1489" y="-178"/>
+            <point key="canvasLocation" x="-172" y="-972"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="EyeSpeak" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DRc-YL-IXJ">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <rect key="frame" x="0.0" y="0.0" width="712" height="1006.9200564096436"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="kdg-hA-5q5">
-                                <rect key="frame" x="20" y="70" width="984" height="1256"/>
+                                <rect key="frame" x="20" y="20" width="672" height="967"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="bjX-oB-sG1">
-                                        <rect key="frame" x="0.0" y="0.0" width="984" height="405.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="672" height="309"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z84-YO-ivB">
-                                                <rect key="frame" x="0.0" y="0.0" width="487" height="405.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="331" height="309"/>
                                                 <color key="backgroundColor" red="0.23261024746192893" green="0.23261024746192893" blue="0.23261024746192893" alpha="0.90461793664383561" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 1">
@@ -158,7 +129,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QM9-9U-RQj">
-                                                <rect key="frame" x="497" y="0.0" width="487" height="405.5"/>
+                                                <rect key="frame" x="341" y="0.0" width="331" height="309"/>
                                                 <color key="backgroundColor" red="0.23261024750000001" green="0.23261024750000001" blue="0.23261024750000001" alpha="0.90461793660000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 1">
@@ -168,10 +139,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="b9M-0n-HEk">
-                                        <rect key="frame" x="0.0" y="425.5" width="984" height="405"/>
+                                        <rect key="frame" x="0.0" y="329" width="672" height="309"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y2S-58-E4Q">
-                                                <rect key="frame" x="0.0" y="0.0" width="487" height="405"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="331" height="309"/>
                                                 <color key="backgroundColor" red="0.23261024746192893" green="0.23261024746192893" blue="0.23261024746192893" alpha="0.90461793664383561" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 2">
@@ -179,7 +150,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4dG-pa-5Bj">
-                                                <rect key="frame" x="497" y="0.0" width="487" height="405"/>
+                                                <rect key="frame" x="341" y="0.0" width="331" height="309"/>
                                                 <color key="backgroundColor" red="0.23261024750000001" green="0.23261024750000001" blue="0.23261024750000001" alpha="0.90461793660000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 2">
@@ -189,10 +160,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2cx-lF-4rB">
-                                        <rect key="frame" x="0.0" y="850.5" width="984" height="405.5"/>
+                                        <rect key="frame" x="0.0" y="658" width="672" height="309"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CeT-TJ-IKd">
-                                                <rect key="frame" x="0.0" y="0.0" width="487" height="405.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="331" height="309"/>
                                                 <color key="backgroundColor" red="0.23261024746192893" green="0.23261024746192893" blue="0.23261024746192893" alpha="0.90461793664383561" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 3">
@@ -200,7 +171,7 @@
                                                 </state>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Khu-dj-nPG">
-                                                <rect key="frame" x="497" y="0.0" width="487" height="405.5"/>
+                                                <rect key="frame" x="341" y="0.0" width="331" height="309"/>
                                                 <color key="backgroundColor" red="0.23261024750000001" green="0.23261024750000001" blue="0.23261024750000001" alpha="0.90461793660000001" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <state key="normal" title="Button 3">
@@ -231,7 +202,6 @@
                         <outletCollection property="buttons" destination="Khu-dj-nPG" collectionClass="NSMutableArray" id="4Kz-qu-q6C"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="343" y="-179"/>
         </scene>
